better startup script.